download button bug fixes

--- a/index.html
+++ b/index.html
@@ -421,9 +421,9 @@
         <section class="flex flex-col md:flex-row justify-center items-center py-[60px] gap-x-[60px]">
 
             <!-- Windows Section -->
-            <div class="flex flex-col items-center md:mt-[-10px]">
+            <div class="flex flex-col items-center md:mt-[20px] lg:mt-[-10px]">
                 <img src="./assets/windows-logo.png" alt="windows" class="w-[90px]">
-                <button class="mt-8 px-[75px] py-[5px] bg-[#0066b8] hover:bg-[#005BA4] text-white text-[18px] leading-loose font-semibold">
+                <button class="mt-8 px-[75px] py-[5px] lg:px-[75px] lg:py-[5px] md:px-[35px] md:py-[5px] bg-[#0066b8] hover:bg-[#005BA4] text-white text-[18px] leading-loose font-semibold">
                     <img src="./assets/download.svg" alt="download" class="w-[18px] inline-block">
                     Windows
                     <p class="flex items-center text-[12px] ml-[5px]">Windows 8, 10, 11</p>
@@ -454,12 +454,12 @@
             <div class="flex flex-col items-center">
                 <img src="./assets/linux-logo.png" alt="windows" class="w-[90px]">
                 <div class="flex flex-row">
-                    <button class="mt-8 px-[35px] py-[5px] bg-[#0066b8] hover:bg-[#005BA4] text-white text-[18px] leading-loose font-semibold mr-[2px]">
+                    <button class="mt-8 px-[35px] py-[5px] lg:px-[35px] lg:py-[5px] md:px-[35px] md:py-[5px] bg-[#0066b8] hover:bg-[#005BA4] text-white text-[18px] leading-loose font-semibold mr-[2px]">
                         <img src="./assets/download.svg" alt="download" class="w-[18px] inline-block">
                         .deb
                         <p class="flex items-center text-[12px] ml-[5px]">Debian, Ubuntu</p>
                     </button>
-                    <button class="mt-8 px-[15px] py-[5px] bg-[#0066b8] hover:bg-[#005BA4] text-white text-[18px] leading-loose font-semibold ml-[2px]">
+                    <button class="mt-8 px-[15px] py-[5px] lg:px-[15px] lg:py-[5px] md:px-[15px] md:py-[5px] bg-[#0066b8] hover:bg-[#005BA4] text-white text-[18px] leading-loose font-semibold ml-[2px]">
                         <img src="./assets/download.svg" alt="download" class="w-[18px] inline-block">
                         .rpm
                         <p class="flex items-center text-[12px] ml-[5px]">Red Hat, Fedora, SUSE</p>
@@ -494,7 +494,7 @@
             <!-- Mac Section -->
             <div class="flex flex-col items-center md:mt-[-95px]">
                 <img src="./assets/apple-logo.svg" alt="windows" class="w-[90px]">
-                <button class="mt-8 px-[75px] py-[5px] bg-[#0066b8] hover:bg-[#005BA4] text-white text-[18px] leading-loose font-semibold">
+                <button class="mt-8 px-[75px] py-[5px] lg:px-[75px] lg:py-[5px] md:px-[35px] md:py-[5px] bg-[#0066b8] hover:bg-[#005BA4] text-white text-[18px] leading-loose font-semibold">
                     <img src="./assets/download.svg" alt="download" class="w-[18px] inline-block">
                     Mac
                     <p class="flex items-center text-[12px] ml-[5px]">macOS 10.11+</p>
