--- a/index.html
+++ b/index.html
@@ -342,7 +342,6 @@
                 VS Code for
             </p>
             <div class="bg-[#f5f5f5] flex flex-row md:flex-col md:items-center">
-                <!-- <div class="flex flex-col md:flex-row justify-evenly w-[70%] md:mx-[220px] gap-[20px] md:py-[20px]"> -->
                 <div class="flex flex-col w-[70%] md:w-[90%] lg:w-[70%] md:grid md:grid-col md:grid-cols-6 md:gap-6 md:mx-[220px] gap-[20px] md:py-[20px]">
                     <p class="flex flex-row text-[15px] md:text-[18px] font-[350]">
                         <img src="./assets/javascript.svg" alt="Javascript" class="w-[30px]">
@@ -369,8 +368,6 @@
                         C/C++
                     </p>
                 </div>
-        
-                <!-- <div class="flex flex-col md:flex-row w-[70%] md:mx-[220px] gap-[20px] justify-evenly"> -->
                 <div class="flex flex-col w-[70%] md:w-[90%] lg:w-[70%] md:grid md:grid-col md:grid-cols-6 md:gap-6 md:mx-[220px] gap-[20px]">
                     <p class="flex flex-row text-[15px] md:text-[18px] font-[350]">
                         <img src="./assets/json.svg" alt="JSON" class="w-[30px]">
@@ -548,21 +545,21 @@
                             </span>
                         </li>
                         <li class="hover:text-[#9778cf]">
-                            <a href="">
+                            <a href="https://twitter.com/intent/follow?&original_referer=https://code.visualstudio.com/&screen_name=code" target="_blank">
                                 Follow @code
                             </a>
                         </li>
                     </ul>
                     <ul class="flex flex-row justify-between font-semibold">
                         <li class="flex flex-row text-[11px] py-[2px] px-[6px] bg-[#ffffff] text-[#333333] mr-[2px] rounded">
-                            <a href="">
+                            <a href="https://github.com/Microsoft/vscode/" target="_blank">
                                 <img src="./assets/github-icon.svg" alt="github-icon" class="h-[14px] mt-[1px]">
                             </a>
-                            <a href=""><span class="px-[2px]">Star</span></a>
+                            <a href="https://github.com/Microsoft/vscode/" target="_blank"><span class="px-[2px]">Star</span></a>
                         </li>
                         <li class="text-[11px] py-[2px] px-[8px] bg-[#ffffff] text-[#000000] ml-[2px] rounded hover:text-[#0071bc]">
-                            <a href="">
-                                139,901
+                            <a href="https://github.com/Microsoft/vscode/stargazers" target="_blank">
+                                140,037
                             </a>
                         </li>
                     </ul>
@@ -570,14 +567,14 @@
                 <div class="flex flex-row gap-x-[38px] text-[12px] lg:w-[40%] lg:mt-[20px] lg:ml-[30px]">
                     <div>
                         <ul class="flex flex-row gap-x-[25px] ml-[15px]">
-                            <li>Support</li>
-                            <li>Privacy</li>
-                            <li>Terms of Use</li>
-                            <li>License</li>
+                            <li><a href="https://support.serviceshub.microsoft.com/supportforbusiness/create?sapId=d66407ed-3967-b000-4cfb-2c318cad363d" target="_blank" class="hover:text-[#A8A0F2]">Support</a></li>
+                            <li><a href="https://privacy.microsoft.com/en-ca/privacystatement" target="_blank" class="hover:text-[#A8A0F2]">Privacy</a></li>
+                            <li><a href="https://www.microsoft.com/en-us/legal/terms-of-use" target="_blank" class="hover:text-[#A8A0F2]">Terms of Use</a></li>
+                            <li><a href="https://code.visualstudio.com/License" target="_blank" class="hover:text-[#A8A0F2]">License</a></li>
                         </ul>
                     </div>
                     <div class="flex flex-col gap-y-[2px]">
-                        <a href="">
+                        <a href="https://www.microsoft.com/en-in/">
                             <img src="./assets/microsoft-logo.png" alt="microsoft" class="h-[20px]">
                         </a>
                         <span>© 2022 Microsoft</span>
