added max width and fixed footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <style>
         body {
             font-family: "Segoe UI", sans-serif;
-            max-width: 4320px;
         }
         td {
             padding: 3px;
@@ -26,7 +25,7 @@
     <title>VS Code Clone</title>
 </head>
 
-<body>
+<body class="max-w-[1920px] mx-auto">
     <!-- Navbar -->
     <header class="bg-[#2C2C32] flex flex-col items-center sticky top-0 z-10">
         <section
@@ -584,12 +583,10 @@
         </section>
 
         <!-- Education Purpose footer -->
-        <footer>
-            <section class="bg-[#25252B] items-center fixed bottom-0 z-10 text-white w-full text-center p-2 text-lg">
-                <p>
-                    Created for <span class="font-bold">Educational</span> and <span class="font-bold">Learning</span> purpose only.
-                </p>
-            </section>
+        <footer class="bg-[#25252B] items-center sticky bottom-0 z-10 text-white w-full text-center p-2 text-lg">
+            <p>
+                Created for <span class="font-bold">Educational</span> and <span class="font-bold">Learning</span> purpose only.
+            </p>
         </footer>
     </main>
 </body>
