added CLI download buttons in download section

--- a/index.html
+++ b/index.html
@@ -438,6 +438,12 @@
                         <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">x86</a></td>
                         <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Arm64</a></td>
                     </tr>
+                    <tr>
+                        <th class="text-[#444444] text-[16px] font-medium">CLI</th>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">x64</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">x86</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Arm64</a></td>
+                    </tr>
                 </table>
             </div>
 
@@ -479,6 +485,12 @@
                         <th class="text-[#444444] text-[16px] font-medium">Snap</th>
                         <td colspan="2" class="bg-[#0066b8] rounded" class="bg-[#0066b8] hover:bg-[#005BA4]"><a href="">Snap Store</a></td>
                     </tr>
+                    <tr>
+                        <th class="text-[#444444] text-[16px] font-medium">CLI</th>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">x64</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Arm32</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Arm64</a></td>
+                    </tr>
                 </table>
             </div>
 
@@ -493,8 +505,13 @@
                 <table class="my-[20px] text-[#FFFFFF] text-[12px] border-separate border-spacing-1">
                     <tr>
                         <th class="text-[#444444] text-[16px] font-medium">.zip</th>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Intel chip</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Apple silicon</a></td>
                         <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Universal</a></td>
-                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Intel</a></td>
+                    </tr>
+                    <tr>
+                        <th class="text-[#444444] text-[16px] font-medium">CLI</th>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Intel chip</a></td>
                         <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Apple silicon</a></td>
                     </tr>
                 </table>
